# dianachat-agent

./: .env.example  .gitignore  .windsurf  .windsurfrules  AGENT.md  README.md  out  pyproject.toml  requirements.txt  run.py
data/: paragraphs.pkl  vdb_data
data/docs/: 1-pricelogic_company_info.txt  2-seed_funding_round_terms.txt  5-market-opportunity.txt  Chris McRoberts.txt  _downloads.html  bridgehouse.txt  index.html  xmlrpc.php﹖rsd.xml
data/docs/a-discussion-with-sarah-wiser-yoga-massage-therapist-master-gardener/: index.html
data/docs/blog/: index.html
data/docs/bridge-house-ceremony/: index.html
data/docs/bridgehouse-assessment-process/: index.html
data/docs/feed/: index.rss
data/docs/gallery/: index.html
data/docs/how-did-bridge-house-come-to-be/: index.html
data/docs/how-we-measure-success-at-bridge-house/: index.html
data/docs/integrating-medical-tests-within-holistic-mental-health-assessment/: index.html
data/docs/medication-management-at-bridge-house/: index.html
data/docs/nutrition-at-bridge-house/: index.html
data/docs/stabilization-assessment-and-treatment-a-hybrid-approach/: index.html
data/docs/staff-trainings-at-bridge-house/: index.html
data/index/: paragraphs.pkl  vdb_data
docs/: 3-technology.txt  4-financial_projections.txt
rag/data/: paragraphs.pkl  vdb_data
scripts/: inspect_rag_data.py  rebuild_rag_index.py  test_embedding.py  test_openai_key.py
src/dianachat_agent/: log.py  main.py
tests/: test_diana_agent.py  test_main.py
tests/agents/: test_diana_agent.py
tests/rag/: test_service.py
(+214 files in other folders)
