[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dianachat-agent"
version = "0.1.0"
authors = [
    { name = "PriceLogic", email = "dev@pricelogic.com" },
]
description = "DianaChat Agent for PriceLogic"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["dianachat_agent*"]
namespaces = false
